--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<form method="post">
+	<input type="text" id="name"  placeholder="name" required>
+	<input type="email" id="email"  placeholder="email" required>
+	<input type="radio" id="gender_m" required field="">
+	<label id=gender_m>Male</label>
+	<label id=gender_f>Female</label>
+	<input type="" id="radio" placeholder="" required="" field="">
+	<input type="" id="" placeholder="" required="" field="">
+	<input type="" id="" placeholder="" required="" field="">
+	<input type="" id="" placeholder="" required="" field="">
+	<input type="" id="" placeholder="" required="" field="">
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
