--- a/main.html
+++ b/main.html
@@ -9,16 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
 <form method="post">
-	<input type="text" id="name"  placeholder="name" required>
+	<input type="text" id="name" placeholder="name" required>
 	<input type="email" id="email"  placeholder="email" required>
-	<input type="radio" id="gender_m" required field="">
+	<input type="radio" id="gender_m" field="Gender" required>
 	<label id=gender_m>Male</label>
+	<input type="radio" id="gender_f" required field="Gender">
 	<label id=gender_f>Female</label>
-	<input type="" id="radio" placeholder="" required="" field="">
-	<input type="" id="" placeholder="" required="" field="">
-	<input type="" id="" placeholder="" required="" field="">
-	<input type="" id="" placeholder="" required="" field="">
-	<input type="" id="" placeholder="" required="" field="">
+	<input type="select" id="cars" placeholder="--Please choose an option--" required="" field="">
+	<input type="number" id="age" placeholder="age"  field="" required>
+	<input type="date" id="dob" required="" field="">
+	<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" field="">
+	<input type="password" id="password" placeholder="Password" required field="">
+	<input type="checkbox" id="tos"  required field="">
 </form>
     <script type="text/javascript" src="./script.js">
 </script>
